Fix layout problem

--- a/app/dashboard/assets/monitor.css
+++ b/app/dashboard/assets/monitor.css
@@ -178,14 +178,15 @@
     color:black;
     text-align: center;
     margin: 0px;
-    padding-left: 0rem;
+    
 }
 
 .monitor-output{
     background-color: #fff;
     border: 1px solid rgba(122, 120, 120, 0.2);
     border-radius: 0.4rem;
-    padding: 1rem;
+    padding: 0rem;
+    padding-top: 0.2rem;
     margin-top: 0px;
     width: 12rem;
     height: 2rem;
